--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Duck Life | BCHS Unblocked Games</title>
+    <title>Duck Life Vrkids2009</title>
     <link rel="icon" type="image/x-icon" href="icon.png" />
     <link rel="shortcut icon" type="image/x-icon" href="icon.png" />
   </head>
